slide/src/test/ui/error/invalid_token.slide
===in
9 * 32 @ 4 ~ 10 - 5
===in

~~~stdout
~~~stdout

~~~stderr
error[S0001]: Invalid token
  |
1 | 9 * 32 @ 4 ~ 10 - 5 
  |        ^
  |
  = note: token must be mathematically significant

error[S0001]: Invalid token
  |
1 | 9 * 32 @ 4 ~ 10 - 5 
  |            ^
  |
  = note: token must be mathematically significant
~~~stderr

~~~exitcode
1
~~~exitcode
